It rotates now, :D.

--- a/Spacebox.html
+++ b/Spacebox.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <html lang="en">
-
   <head>
     <meta charset="UTF-8">
-    <script src="Spaceship.js"></script>
+    <script src="node_modules/wetfish-basic/dist/basic.js"></script>
+    <script src="Spaceflight.js"></script>
     <link href="Spacebox.css" rel="stylesheet" type="text/css">
   </head>
   <body>
