fixed spaceship movement.

--- a/Spacebox.html
+++ b/Spacebox.html
@@ -7,7 +7,9 @@
     <link href="Spacebox.css" rel="stylesheet" type="text/css">
   </head>
   <body>
+<div class="spaceship-wrap">
   <img src="blueship.png" class="spaceship">  
-  </body>
+</div>  
+</body>
 </html>
 
